--- a/src/App.css
+++ b/src/App.css
@@ -18,3 +18,25 @@ a {
   color: inherit;
   text-decoration: none;
 }
+
+::-webkit-scrollbar{
+  width: 10px;
+  height: 7px;
+}
+
+
+::-webkit-scrollbar-track {
+  background: rgb(0, 0, 0);
+  border-radius: 100vw;
+  margin-block: .5em;
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgb(146, 146, 146);
+  border: .25em solid hsl(120, 75%, 50% / 1);
+  border-radius: 100vw;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(252, 252, 252);
+}
