--- a/src/components/MainContent/MainCollection/MainCollection.module.css
+++ b/src/components/MainContent/MainCollection/MainCollection.module.css
@@ -5,16 +5,30 @@
     display: flex;
     font-family: Playfair Display;
     height: 65vh;
-    flex-wrap: wrap;
 }
 
 .hours_block {
-    width: 55%;
-    font-size: 1.3rem;
+    width: 50%;
+    background-image: url("https://kingsname.store/images/nashi_magazini/Nazran/FFS00360.jpg");
+    background-repeat: no-repeat;
+    background-size: 100%;
+    font-size: 1.5rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+.hours_block button {
+    width: 30%;
+    background: none;
+    font-family: Playfair Display;
+    font-size: 1.3rem;
+    color: white;
+    font-weight: 100;
+    cursor: pointer;
+    border: 0.1rem solid white;
+    height: 3rem;
 }
 
 .liniya {
@@ -26,9 +40,10 @@
 
 
 .catalog_block {
-    background-image: url("./man.png");
+    background-image: url("https://kingsname.store/images/nashi_magazini/Nazran/FFS00282.jpg");
+    background-repeat: no-repeat;
     background-size: 100%;
-    width: 45%;
+    width: 50%;
     font-size: 1.5rem;
     display: flex;
     justify-content: center;
@@ -51,7 +66,10 @@
 
 
 .collection {
+    width: 100%;
     display: flex;
+    justify-content: center;
+    align-items: center;
     flex-direction: column;
     font-weight: 100;
     line-height: 2.5rem;
