--- a/src/pages/my-team/MyTeam.module.css
+++ b/src/pages/my-team/MyTeam.module.css
@@ -1,76 +1,58 @@
-.bloc1 {
-    width: 200px;
-    height: 200px;
-}
-
-.bloc2 {
+.wrapper {
+    background-color: rgb(15, 15, 15, 1);
+    width: 100%;
     display: flex;
-}
-
-.bloc3 {
-    margin-top: 5px;
-    margin-left: 5px;
-    width: 200px;
-    height: 200px;
+    font-family: Playfair Display;
+    flex-direction: column;
     text-align: center;
 }
-.wrapper {
-    margin-bottom: 40px;
+
+.our_team {
+    width: 100%;
+    display: flex;
+    margin: 2.5rem 0rem 3rem 0rem;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.team img {
+    width: 100%;
+    height: 30rem;
+}
+
+.team h2 {
+    margin: 0.8rem 0rem;
+    font-weight: 100;
+}
+
+
+.about_us {
+    width: 80%;
+    margin: 2.5rem auto;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.context {
+    line-height: 1.8rem;
+    width: 45%;
+    display: flex;
+    justify-content: flex-start;
+    text-align: left;
+    font-size: 1.2rem;
+}
+
+.team {
+    width: 30%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height:auto
 }
 
-img {
-    width:100%;
-    height: 100%;
-}
 
-.icon {
-    width: 100%;
-    height: 100%;
-    color:rgba(105, 105, 105, 0.108);
-}
-.name1 {
-    color: black;
-}
 
-.bloc4 {
-   margin-top: 100px; 
-   margin-left: 20px;
-    
-}
 
-.bloc5 {
-    margin-top: 30px;
-    margin-left: 30px;
-    width: max-content;
-    height: 100px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.name {
-    font-size: 15px;
-    margin-right: 5px;
-    color: black;
-}
-
-.text {
-    color: black;
-     margin-left: 20px;
-     font-size: 20px;
-}
-
-.img_2 {
-    width: 100px;
-}
-
-.icon_2 {
-    width: 100px;
-    height: 100%;
-    color:rgba(105, 105, 105, 0.108);
+.wrapper span {
+    margin-top: 2rem;
+    font-size: 2.5rem;
 }
