--- a/src/components/HeaderMain/Navbar.css
+++ b/src/components/HeaderMain/Navbar.css
@@ -39,6 +39,7 @@
     cursor: pointer;
     width: 100%;
     display: flex;
+    margin-right: 0.2rem;
     font-size: 0.9rem;
   }
   
@@ -66,7 +67,7 @@
   .dropdown {
     position: absolute;
     right: 0;
-    left: auto;
+    left: -50px;
     box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.08),
       0 4px 6px -2px rgba(71, 63, 79, 0.16);
     font-size: 0.875rem;
@@ -75,7 +76,7 @@
     padding: 0.5rem 0;
     color: white;
     list-style: none;
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(15, 15, 15, 1);
     border-radius: 0.5rem;
     display: none;
   }
