--- a/src/App.css
+++ b/src/App.css
@@ -4,10 +4,15 @@
   box-sizing: border-box;
 }
 
+#root {
+  height: 100%;
+}
+
 html,
 body {
   padding: 0;
   color: #fff;
+  height: 100%;
   margin: 0;
   background-color: whitesmoke;
   font-size: 1rem;
@@ -39,4 +44,10 @@ a {
 
 ::-webkit-scrollbar-thumb:hover {
   background: rgb(252, 252, 252);
+}
+
+.App {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
 }
