--- a/src/pages/MainProducts/MainProducts.module.css
+++ b/src/pages/MainProducts/MainProducts.module.css
@@ -4,6 +4,7 @@
     color: black;
     font-family: Playfair Display;
     font-size: 0.6rem;
+    flex-wrap: wrap;
     justify-content: space-around;
     background-color: rgb(255, 255, 255);
     flex: 1 1 auto;
