Скрыл кнопки авторизации при входе юзера

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -28,3 +28,9 @@
     display: flex;
     justify-content: space-around;
 }
+
+.block_reg {
+    width: 8rem;
+    display: flex;
+    justify-content: space-between;
+}
